<resources>
    <string name="app_name">Piou-Piou Scan</string>
    <string name="requette">Requette</string>
    <string name="vitesseVent">KNOTS</string>
    <string name="loading">Chargement...</string>
    <string name="author">By Plectre</string>
    <string name="rosedesvents">roseDesVents</string>
    <string name="title_activity_maps">Map Pioupiou</string>
    <string name="desole">Desolé pas de coordonnées valides !</string>
    <string name="timeOut">Time Out !</string>
    <string name="url_pioupiou">https://pioupiou.fr/fr</string>
    <string name="longClick">- Appui Long pour localiser avec Maps -</string>
    <string name="last_maj">Derniére maj</string>
</resources>
